# Clothing-Simulation

./: CMakeLists.txt  Cloth.cpp  Cloth.h  Mouse.cpp  Mouse.h  Point.cpp  Point.h  Stick.cpp  Stick.h  definitions.h  main.cpp
